--- a/MotifsDetection.ipynb
+++ b/MotifsDetection.ipynb
@@ -6,7 +6,7 @@
       "name": "MotifsDetection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNn63OOrHfE8+L97Z2CsxcP",
+      "authorship_tag": "ABX9TyOhMqv6rntT01kpNDbF0Ruz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "# **Detección de Motifs**\n",
         "Este notebook contiene los pasos para la proposición de motifs (motivos) candidatos dentro de un conjunto de cadenas de ADN.\n",
         "\n",
-        "Se analizará dormancy survival regulator (DosR). Este factor de transcripción regula la expresión de genes bajo condiciones hipóxicas. Se analizarán una serie de 15-mers para detectar los puntos de partida de los enlaces que disparan la actuación de DosR."
+        "Se analizará dormancy survival regulator (DosR). Este factor de transcripción regula la expresión de genes bajo condiciones hipóxicas para la turbeculosis micobacteriana. Se analizarán una serie de 15-mers para detectar los puntos de partida de los enlaces que disparan la actuación de DosR."
       ]
     },
     {
