--- a/MotifsDetection.ipynb
+++ b/MotifsDetection.ipynb
@@ -6,7 +6,7 @@
       "name": "MotifsDetection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM9T0hc2sBUGKe2KaxV7IqE",
+      "authorship_tag": "ABX9TyNgQvGSBR0kfWpjuyADekId",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,7 +252,7 @@
       },
       "source": [
         "### Muestra de los Motifs resultantes\n",
-        "Podmeos encontrar que, por ejemplo, en el séptimo caracter de cada motif tenemos en todos los casos Guanina. En el segundo caracter de cada motif es más frecuente la Timina."
+        "Podemos encontrar que, por ejemplo, en el séptimo caracter de cada motif tenemos en todos los casos Guanina. En el segundo caracter de cada motif es más frecuente la Timina."
       ]
     },
     {
