--- a/MotifsDetection.ipynb
+++ b/MotifsDetection.ipynb
@@ -6,7 +6,7 @@
       "name": "MotifsDetection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNgQvGSBR0kfWpjuyADekId",
+      "authorship_tag": "ABX9TyMXyrpF9Pi9E1xnqtTc0Si9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -339,7 +339,9 @@
         "\n",
         "# *Limitaciones*\n",
         "\n",
-        "*   El GreedyMotifSearch es ineficiente y depende mucho del punto de partida en la búsqueda.\n",
+        "*   El GreedyMotifSearch es eficiente en velocidad de búsqueda, pero ineficiente en encontrar candidatos óptimos. \n",
+        "\n",
+        "*   Se depende mucho del punto de partida en la búsqueda.\n",
         "\n",
         "Basado en los temas dictados en el curso Biology Meets Programming ( https://www.coursera.org/learn/bioinformatics/home/week/3 )\n",
         "\n",
