--- a/MotifsDetection.ipynb
+++ b/MotifsDetection.ipynb
@@ -6,7 +6,7 @@
       "name": "MotifsDetection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPmYcqoejRouazVKJGg3afC",
+      "authorship_tag": "ABX9TyOItFnO0u4K2tRZKx/XxZVQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,7 +120,7 @@
         "colab": {}
       },
       "source": [
-        "# Input:  A set of kmers Motifs\n",
+        "# Input:  A set of kmers motifs\n",
         "# Output: Count(Motifs)\n",
         "def Count(Motifs):\n",
         "    count = {} # initializing the count dictionary\n",
@@ -134,8 +134,8 @@
         "            count[symbol][j] += 1\n",
         "    return count\n",
         "\n",
-        "# Input:  A list of kmers Motifs\n",
-        "# Output: the profile matrix of Motifs, as a dictionary of lists.\n",
+        "# Input:  A list of kmers motifs\n",
+        "# Output: the profile matrix of motifs, as a dictionary of lists.\n",
         "def Profile(Motifs):\n",
         "    t = len(Motifs)\n",
         "    k = len(Motifs[0])\n",
@@ -145,8 +145,8 @@
         "            profile[i][j] = profile[i][j]/t   \n",
         "    return profile\n",
         "\n",
-        "# Input:  A set of kmers Motifs\n",
-        "# Output: A consensus string of Motifs.\n",
+        "# Input:  A set of kmers motifs\n",
+        "# Output: A consensus string of motifs.\n",
         "def Consensus(Motifs):\n",
         "    k = len(Motifs[0])\n",
         "    count = Count(Motifs)\n",
@@ -162,7 +162,7 @@
         "    return consensus\n",
         "\n",
         "\n",
-        "# Input:  A set of k-mers Motifs\n",
+        "# Input:  A set of k-mers motifs\n",
         "# Output: The score of these k-mers.\n",
         "def Score(Motifs):\n",
         "    # Insert code here\n",
@@ -251,7 +251,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Muestra de los Motifs resultantes\n",
+        "### Muestra de los motifs resultantes\n",
         "Podemos encontrar que, por ejemplo, en el séptimo caracter de cada motif tenemos en todos los casos Guanina. En el segundo caracter de cada motif es más frecuente la Timina."
       ]
     },
