--- a/MotifsDetection_v2.ipynb
+++ b/MotifsDetection_v2.ipynb
@@ -6,7 +6,7 @@
       "name": "MotifsDetection_v2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBMvjWrMGKg4FhEVvMtfjv",
+      "authorship_tag": "ABX9TyM5JTj1Fp//QSIA3/twMGBN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +124,7 @@
         "colab": {}
       },
       "source": [
-        "# Input:  A set of kmers Motifs\n",
+        "# Input:  A set of k-mers motifs\n",
         "# Output: CountWithPseudocounts(Motifs)\n",
         "def Count(Motifs):\n",
         "    count = {} # initializing the count dictionary\n",
@@ -138,7 +138,7 @@
         "            count[symbol][j] += 1\n",
         "    return count\n",
         "\n",
-        "# Input:  A set of kmers Motifs\n",
+        "# Input:  A set of k-mers motifs\n",
         "# Output: ProfileWithPseudocounts(Motifs)\n",
         "def Profile(Motifs):\n",
         "    t = len(Motifs)\n",
@@ -152,7 +152,7 @@
         "            profile[i][j] = profile[i][j]/t   \n",
         "    return profile\n",
         "\n",
-        "# Input:  A set of kmers Motifs\n",
+        "# Input:  A set of k-mers motifs\n",
         "# Output: A consensus string of Motifs.\n",
         "def Consensus(Motifs):\n",
         "    k = len(Motifs[0])\n",
@@ -169,7 +169,7 @@
         "    return consensus\n",
         "\n",
         "\n",
-        "# Input:  A set of k-mers Motifs\n",
+        "# Input:  A set of k-mers motifs\n",
         "# Output: The score of these k-mers.\n",
         "def Score(Motifs):\n",
         "    result = Consensus(Motifs)\n",
@@ -202,7 +202,7 @@
         "            max_kmer = text[i:i+k]            \n",
         "    return max_kmer\n",
         "\n",
-        "# Input:  A list of kmers Dna, and integers k and t (where t is the number of kmers in Dna)\n",
+        "# Input:  A list of k-mers Dna, and integers k and t (where t is the number of k-mers in Dna)\n",
         "# Output: GreedyMotifSearch(Dna, k, t)\n",
         "def GreedyMotifSearch(Dna, k, t):\n",
         "    BestMotifs = []\n",
@@ -257,7 +257,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Muestra de los Motifs resultantes\n",
+        "### Muestra de los motifs resultantes\n",
         "En esta segunda versión volvemos a encontrar como primer nucleótido a la Guanina. Pero hay nuevos patrones encontrados como el de la Guanina en la segunda posición o la Citosina en la tercera. Este método muestra ser mucho más efectivo. Lo que se comprobará más adelante."
       ]
     },
@@ -306,7 +306,7 @@
         "### Consenso de los motifs y puntaje\n",
         "El mejor puntaje posible es cero, es decir, se desea encontrar menor cantidad de diferencias entre los motifs propuestos. Para esta prueba se calcula un solo grupo de motifs, así que se obtiene una sola respuesta generada por el consenso de los motifs.\n",
         "\n",
-        "En este caso el resultado es 20, mientras que el método de la versión anterior encontraba un Motif con score de 64. Una mejora de casi el 70%"
+        "En este caso el resultado es 20, mientras que el método de la versión anterior encontraba un motif con score de 64. Una mejora de casi el 70%"
       ]
     },
     {
