--- a/MotifsDetection_v4.ipynb
+++ b/MotifsDetection_v4.ipynb
@@ -6,7 +6,7 @@
       "name": "MotifsDetection_v4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/9mwyeNBJzoyTUh1F0AR9",
+      "authorship_tag": "ABX9TyOd/TXPEwIzehzBv1W4b6Va",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "source": [
         "import random"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "\n",
         "Dna = [\"GCGCCCCGCCCGGACAGCCATGCGCTAACCCTGGCTTCGATGGCGCCGGCTCAGTTAGGGCCGGAAGTCCCCAATGTGGCAGACCTTTCGCCCCTGGCGGACGAATGACCCCAGTGGCCGGGACTTCAGGCCCTATCGGAGGGCTCCGGCGCGGTGGTCGGATTTGTCTGTGGAGGTTACACCCCAATCGCAAGGATGCATTATGACCAGCGAGCTGAGCCTGGTCGCCACTGGAAAGGGGAGCAACATC\", \"CCGATCGGCATCACTATCGGTCCTGCGGCCGCCCATAGCGCTATATCCGGCTGGTGAAATCAATTGACAACCTTCGACTTTGAGGTGGCCTACGGCGAGGACAAGCCAGGCAAGCCAGCTGCCTCAACGCGCGCCAGTACGGGTCCATCGACCCGCGGCCCACGGGTCAAACGACCCTAGTGTTCGCTACGACGTGGTCGTACCTTCGGCAGCAGATCAGCAATAGCACCCCGACTCGAGGAGGATCCCG\", \"ACCGTCGATGTGCCCGGTCGCGCCGCGTCCACCTCGGTCATCGACCCCACGATGAGGACGCCATCGGCCGCGACCAAGCCCCGTGAAACTCTGACGGCGTGCTGGCCGGGCTGCGGCACCTGATCACCTTAGGGCACTTGGGCCACCACAACGGGCCGCCGGTCTCGACAGTGGCCACCACCACACAGGTGACTTCCGGCGGGACGTAAGTCCCTAACGCGTCGTTCCGCACGCGGTTAGCTTTGCTGCC\", \"GGGTCAGGTATATTTATCGCACACTTGGGCACATGACACACAAGCGCCAGAATCCCGGACCGAACCGAGCACCGTGGGTGGGCAGCCTCCATACAGCGATGACCTGATCGATCATCGGCCAGGGCGCCGGGCTTCCAACCGTGGCCGTCTCAGTACCCAGCCTCATTGACCCTTCGACGCATCCACTGCGCGTAAGTCGGCTCAACCCTTTCAAACCGCTGGATTACCGACCGCAGAAAGGGGGCAGGAC\", \"GTAGGTCAAACCGGGTGTACATACCCGCTCAATCGCCCAGCACTTCGGGCAGATCACCGGGTTTCCCCGGTATCACCAATACTGCCACCAAACACAGCAGGCGGGAAGGGGCGAAAGTCCCTTATCCGACAATAAAACTTCGCTTGTTCGACGCCCGGTTCACCCGATATGCACGGCGCCCAGCCATTCGTGACCGACGTCCCCAGCCCCAAGGCCGAACGACCCTAGGAGCCACGAGCAATTCACAGCG\", \"CCGCTGGCGACGCTGTTCGCCGGCAGCGTGCGTGACGACTTCGAGCTGCCCGACTACACCTGGTGACCACCGCCGACGGGCACCTCTCCGCCAGGTAGGCACGGTTTGTCGCCGGCAATGTGACCTTTGGGCGCGGTCTTGAGGACCTTCGGCCCCACCCACGAGGCCGCCGCCGGCCGATCGTATGACGTGCAATGTACGCCATAGGGTGCGTGTTACGGCGATTACCTGAAGGCGGCGGTGGTCCGGA\", \"GGCCAACTGCACCGCGCTCTTGATGACATCGGTGGTCACCATGGTGTCCGGCATGATCAACCTCCGCTGTTCGATATCACCCCGATCTTTCTGAACGGCGGTTGGCAGACAACAGGGTCAATGGTCCCCAAGTGGATCACCGACGGGCGCGGACAAATGGCCCGCGCTTCGGGGACTTCTGTCCCTAGCCCTGGCCACGATGGGCTGGTCGGATCAAAGGCATCCGTTTCCATCGATTAGGAGGCATCAA\", \"GTACATGTCCAGAGCGAGCCTCAGCTTCTGCGCAGCGACGGAAACTGCCACACTCAAAGCCTACTGGGCGCACGTGTGGCAACGAGTCGATCCACACGAAATGCCGCCGTTGGGCCGCGGACTAGCCGAATTTTCCGGGTGGTGACACAGCCCACATTTGGCATGGGACTTTCGGCCCTGTCCGCGTCCGTGTCGGCCAGACAAGCTTTGGGCATTGGCCACAATCGGGCCACAATCGAAAGCCGAGCAG\", \"GGCAGCTGTCGGCAACTGTAAGCCATTTCTGGGACTTTGCTGTGAAAAGCTGGGCGATGGTTGTGGACCTGGACGAGCCACCCGTGCGATAGGTGAGATTCATTCTCGCCCTGACGGGTTGCGTCTGTCATCGGTCGATAAGGACTAACGGCCCTCAGGTGGGGACCAACGCCCCTGGGAGATAGCGGTCCCCGCCAGTAACGTACCGCTGAACCGACGGGATGTATCCGCCCCAGCGAAGGAGACGGCG\", \"TCAGCACCATGACCGCCTGGCCACCAATCGCCCGTAACAAGCGGGACGTCCGCGACGACGCGTGCGCTAGCGCCGTGGCGGTGACAACGACCAGATATGGTCCGAGCACGCGGGCGAACCTCGTGTTCTGGCCTCGGCCAGTTGTGTAGAGCTCATCGCTGTCATCGAGCGATATCCGACCACTGATCCAAGTCGGGGGCTCTGGGGACCGAAGTCCCCGGGCTCGGAGCTATCGGACCTCACGATCACC\"]"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -138,31 +138,37 @@
         "colab": {}
       },
       "source": [
-        "def N_RandomMotifs(Dna, k, t, N):\n",
-        "  BestMotifs = RandomizedMotifSearch(Dna, k, t)\n",
+        "def M_GibbsSampler(Dna, k, t, N, M):\n",
+        "  BestMotifs = [] # output variable\n",
+        "  BestMotifs = GibbsSampler(Dna, k, t, N)\n",
         "  BestScore = Score(BestMotifs)\n",
-        "  for i in range(N-1):\n",
-        "      m = RandomizedMotifSearch(Dna, k, t)\n",
-        "      score = Score(m)\n",
-        "      if score < BestScore:\n",
-        "          BestMotifs = m\n",
-        "          BestScore = score\n",
+        "  for i in range(M-1):\n",
+        "      motifs = GibbsSampler(Dna, k, t, N)\n",
+        "      ActualScore = Score(motifs)\n",
+        "      if ActualScore < BestScore:\n",
+        "          BestMotifs = motifs\n",
+        "          BestScore = ActualScore\n",
         "  return BestMotifs, BestScore\n",
         "\n",
-        "# Input:  Positive integers k and t, followed by a list of strings Dna\n",
-        "# Output: RandomizedMotifSearch(Dna, k, t)\n",
-        "def RandomizedMotifSearch(Dna, k, t):\n",
-        "    # insert your code here\n",
-        "    M = RandomMotifs(Dna, k, t)\n",
-        "    BestMotifs = M\n",
-        "    while True:\n",
-        "        profile = Profile(M)\n",
-        "        M = Motifs(profile, Dna)\n",
-        "        if Score(M) < Score(BestMotifs):\n",
-        "            BestMotifs = M\n",
-        "        else:\n",
-        "            return BestMotifs\n",
         "\n",
+        "# Input:  Integers k, t, and N, followed by a collection of strings Dna\n",
+        "# Output: GibbsSampler(Dna, k, t, N)\n",
+        "def GibbsSampler(Dna, k, t, N):\n",
+        "    BestMotifs = [] # output variable\n",
+        "    motifs = RandomMotifs(Dna, k, t)\n",
+        "    BestMotifs = motifs.copy()\n",
+        "    BestScore = Score(BestMotifs)\n",
+        "    for j in range(N-1):\n",
+        "        i = random.randint(0,t-1)\n",
+        "        profile = Profile(motifs[:i] + motifs[i+1:])\n",
+        "        motifs[i] = ProfileGeneratedString(motifs[i], profile, k)\n",
+        "        ActualScore = Score(motifs)\n",
+        "        if ActualScore < BestScore:\n",
+        "            BestMotifs = motifs\n",
+        "            BestScore = ActualScore\n",
+        "    return BestMotifs\n",
+        "\n",
+        "# place all subroutines needed for GibbsSampler below this line\n",
         "def RandomMotifs(Dna, k, t):\n",
         "    # place your code here.\n",
         "    l = len(Dna[0])\n",
@@ -184,37 +190,6 @@
         "            profile[i][j] = profile[i][j]/t   \n",
         "    return profile\n",
         "\n",
-        "# Input:  A profile matrix Profile and a list of strings Dna\n",
-        "# Output: Motifs(Profile, Dna)\n",
-        "def Motifs(Profile, Dna):\n",
-        "    # insert your code here\n",
-        "    motifs = []\n",
-        "    t = len(Dna)\n",
-        "    k = len(Profile['A'])\n",
-        "    for i in range(t):\n",
-        "        motif = ProfileMostProbableKmer(Dna[i], k, Profile)\n",
-        "        motifs.append(motif)\n",
-        "    return motifs\n",
-        "\n",
-        "# The profile matrix assumes that the first row corresponds to A, the second corresponds to C,\n",
-        "# the third corresponds to G, and the fourth corresponds to T.\n",
-        "# You should represent the profile matrix as a dictionary whose keys are 'A', 'C', 'G', and 'T' and whose values are lists of floats\n",
-        "def ProfileMostProbableKmer(text, k, profile):\n",
-        "    max_p = -1\n",
-        "    max_kmer = ''\n",
-        "    for i in range(len(text)-k+1):\n",
-        "        p = Pr(text[i:i+k], profile)\n",
-        "        if p > max_p:\n",
-        "            max_p = p\n",
-        "            max_kmer = text[i:i+k]            \n",
-        "    return max_kmer\n",
-        "\n",
-        "def Pr(Text, Profile):\n",
-        "    p = float(1)\n",
-        "    for i in range(len(Text)):\n",
-        "        p *= Profile[Text[i]][i]\n",
-        "    return p\n",
-        "\n",
         "# Input:  A set of k-mers motifs\n",
         "# Output: CountWithPseudocounts(Motifs)\n",
         "def Count(Motifs):\n",
@@ -228,6 +203,27 @@
         "            symbol = Motifs[i][j]\n",
         "            count[symbol][j] += 1\n",
         "    return count\n",
+        "\n",
+        "def WeightedDie(Probabilities):\n",
+        "    # your code here\n",
+        "    n = random.uniform(0, 1)\n",
+        "    for p in Probabilities:\n",
+        "        n -= Probabilities[p]\n",
+        "        if n <= 0:\n",
+        "            return p\n",
+        "\n",
+        "def Normalize(Probabilities):\n",
+        "    # your code here\n",
+        "    P_sum = sum(Probabilities.values())\n",
+        "    for k,v in Probabilities.items():\n",
+        "        Probabilities[k] = v/P_sum\n",
+        "    return Probabilities\n",
+        "\n",
+        "def Pr(Text, Profile):\n",
+        "    p = float(1)\n",
+        "    for i in range(len(Text)):\n",
+        "        p *= Profile[Text[i]][i]\n",
+        "    return p\n",
         "\n",
         "# Input:  A set of k-mers motifs\n",
         "# Output: The score of these k-mers.\n",
@@ -257,9 +253,198 @@
         "                m = count[symbol][j]\n",
         "                frequentSymbol = symbol\n",
         "        consensus += frequentSymbol\n",
-        "    return consensus"
+        "    return consensus\n",
+        "\n",
+        "# Input:  A string Text, a profile matrix Profile, and an integer k\n",
+        "# Output: ProfileGeneratedString(Text, profile, k)\n",
+        "def ProfileGeneratedString(Text, profile, k):\n",
+        "    # your code here\n",
+        "    n = len(Text)\n",
+        "    probabilities = {}\n",
+        "    for i in range(0,n-k+1):\n",
+        "        probabilities[Text[i:i+k]] = Pr(Text[i:i+k], profile)\n",
+        "    probabilities = Normalize(probabilities)\n",
+        "    return WeightedDie(probabilities)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "npKA_ikgEaXC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# import the random package\n",
+        "import random\n",
+        "# Copy your GibbsSampler function (along with all required subroutines) below this line\n",
+        "def GibbsSampler(Dna, k, t, N):\n",
+        "    BestMotifs = [] # output variable\n",
+        "    # your code here\n",
+        "    Motifs = RandomMotifs(Dna, k, t)\n",
+        "    BestMotifs = Motifs\n",
+        "    for j in range(1,N):\n",
+        "        i = random.randint(0,t-1)\n",
+        "        ReducedMotifs = []\n",
+        "        for j in range(0,t):\n",
+        "            if j != i:\n",
+        "                ReducedMotifs.append(Motifs[j])\n",
+        "        Profile = ProfileWithPseudocounts(ReducedMotifs)\n",
+        "        Motif_i = ProfileGeneratedString(Dna[i], Profile, k)\n",
+        "        Motifs[i] = Motif_i\n",
+        "        if Score(Motifs) < Score(BestMotifs):\n",
+        "                BestMotifs=Motifs\n",
+        "    return BestMotifs\n",
+        "\n",
+        "# place all subroutines needed for GibbsSampler below this line\n",
+        "# Input:  A list of strings Dna, and integers k and t\n",
+        "# Output: RandomMotifs(Dna, k, t)\n",
+        "# HINT:   You might not actually need to use t since t = len(Dna), but you may find it convenient\n",
+        "\n",
+        "def RandomMotifs(Dna, k, t):\n",
+        "    # place your code here.\n",
+        "    s = len(Dna[0])\n",
+        "    rm = []\n",
+        "    for i in range(0,t):\n",
+        "        init_index = random.randint(1,s-k)\n",
+        "        rm.append(Dna[i][init_index:init_index+k])    \n",
+        "    return rm\n",
+        "\n",
+        "# Input:  A set of kmers Motifs\n",
+        "# Output: ProfileWithPseudocounts(Motifs)\n",
+        "\n",
+        "def ProfileWithPseudocounts(Motifs):\n",
+        "    t = len(Motifs)\n",
+        "    k = len(Motifs[0])\n",
+        "    profile = {} # output variable\n",
+        "    # your code here\n",
+        "    c = CountWithPseudocounts(Motifs)\n",
+        "    for n in 'ACGT':\n",
+        "        p = []\n",
+        "        for i in range(0,k):\n",
+        "            p.append(c[n][i]/(t+4))\n",
+        "        profile[n] = p\n",
+        "    return profile\n",
+        "\n",
+        "# Input:  A set of kmers Motifs\n",
+        "# Output: CountWithPseudocounts(Motifs)\n",
+        "\n",
+        "def CountWithPseudocounts(Motifs):\n",
+        "    t = len(Motifs)\n",
+        "    k = len(Motifs[0])\n",
+        "    # insert your code here\n",
+        "    count = {} # initializing the count dictionary\n",
+        "    for symbol in \"ACGT\":\n",
+        "        count[symbol] = []\n",
+        "        for j in range(k):\n",
+        "             count[symbol].append(1)\n",
+        "    for i in range(t):\n",
+        "        for j in range(k):\n",
+        "             symbol = Motifs[i][j]\n",
+        "             count[symbol][j] += 1\n",
+        "    return count \n",
+        "\n",
+        "#tests in which of the intervals defined by list ar the number r lies\n",
+        "\n",
+        "def testinterval(ar,r):\n",
+        "    ar.sort()\n",
+        "    if r<= ar[0]:\n",
+        "      return ar[0]\n",
+        "    for i in range(1,len(ar)-1):\n",
+        "      if ar[i-1]<r<=ar[i]:\n",
+        "        return ar[i]\n",
+        "    if ar[len(ar)-2]< r:\n",
+        "      return ar[len(ar)-1]\n",
+        "\n",
+        "# Input:  A dictionary Probabilities whose keys are k-mers and whose values are the probabilities of these kmers\n",
+        "# Output: A randomly chosen k-mer with respect to the values in Probabilities\n",
+        "\n",
+        "def WeightedDie(Probabilities):\n",
+        "    # your code here\n",
+        "    sumprob = {}\n",
+        "    s = 0\n",
+        "    for p in Probabilities:\n",
+        "        s += Probabilities[p]\n",
+        "        sumprob[p] = s\n",
+        "    revprob = {}\n",
+        "    for q in sumprob:\n",
+        "      revprob[sumprob[q]] = q\n",
+        "    w = list(sumprob.values())\n",
+        "    r = random.uniform(0,1)\n",
+        "    kmer = revprob[testinterval(w,r)]\n",
+        "    return kmer\n",
+        "\n",
+        "# Input:  A string Text, a profile matrix Profile, and an integer k\n",
+        "# Output: ProfileGeneratedString(Text, profile, k)\n",
+        "\n",
+        "def ProfileGeneratedString(Text, profile, k):\n",
+        "    # your code here\n",
+        "    n = len(Text)\n",
+        "    probabilities = {} \n",
+        "    for i in range(0,n-k+1):\n",
+        "        probabilities[Text[i:i+k]] = Pr(Text[i:i+k], profile)\n",
+        "    probabilities = Normalize(probabilities)\n",
+        "    return WeightedDie(probabilities)\n",
+        "\n",
+        "# Input:  String Text and profile matrix Profile\n",
+        "# Output: Pr(Text, Profile)\n",
+        "\n",
+        "def Pr(Text, Profile):\n",
+        "    # insert your code here\n",
+        "    p = 1\n",
+        "    for i in range(0,len(Text)):\n",
+        "        p *= Profile[Text[i]][i]\n",
+        "    return p\n",
+        "\n",
+        "# Input: A dictionary Probabilities, where keys are k-mers and values are the probabilities of these k-mers (which do not necessarily sum up to 1)\n",
+        "# Output: A normalized dictionary where the probability of each k-mer was divided by the sum of all k-mers' probabilities\n",
+        "\n",
+        "def Normalize(Probabilities):\n",
+        "    # your code here\n",
+        "    result = {}\n",
+        "    sum = 0\n",
+        "    for m in Probabilities:\n",
+        "        sum += Probabilities[m]\n",
+        "    for n in Probabilities:\n",
+        "        result[n]= Probabilities[n]/sum\n",
+        "    return result  \n",
+        "\n",
+        "# Input:  A set of k-mers Motifs\n",
+        "# Output: The score of these k-mers.\n",
+        "\n",
+        "def Score(Motifs):\n",
+        "    # Insert code here\n",
+        "    k = len(Motifs[0])\n",
+        "    t = len(Motifs)\n",
+        "    cs = ConsensusWithPseudocounts(Motifs)\n",
+        "    score = 0\n",
+        "    for j in range(0,k):\n",
+        "        for i in range(0,t):\n",
+        "            if Motifs[i][j] != cs[j]:\n",
+        "                score += 1\n",
+        "    return score\n",
+        "\n",
+        "# Input:  A set of kmers Motifs\n",
+        "# Output: A consensus string of Motifs.\n",
+        "\n",
+        "def ConsensusWithPseudocounts(Motifs):\n",
+        "    # insert your code here\n",
+        "    k = len(Motifs[0])\n",
+        "    count = CountWithPseudocounts(Motifs)\n",
+        "    consensus = \"\"\n",
+        "    for j in range(k):\n",
+        "        m = 0\n",
+        "        frequentSymbol = \"\"\n",
+        "        for symbol in \"ACGT\":\n",
+        "            if count[symbol][j] > m:\n",
+        "                m = count[symbol][j]\n",
+        "                frequentSymbol = symbol\n",
+        "        consensus += frequentSymbol\n",
+        "    return consensus    "
+      ],
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -270,14 +455,14 @@
         "colab": {}
       },
       "source": [
-        "# set t equal to the number of strings in Dna, k equal to 15, and N equal to 100.\n",
         "t = len(Dna)\n",
         "k = 15\n",
         "N = 100\n",
+        "M = 40\n",
         "\n",
-        "BestMotifs, BestScore = N_RandomMotifs(Dna, k, t, N)"
+        "BestMotifs, BestScore = M_GibbsSampler(Dna, k, t, N, M)"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -300,23 +485,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "f017570d-6481-41df-a07c-c8ac7601db00"
+        "outputId": "1dafb235-bc2a-4feb-d6d0-31bc0da8c496"
       },
       "source": [
         "for i in range(len(BestMotifs)):\n",
         "  print( i, '=', BestMotifs[i])"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0 = GGGCCGGAAGTCCCC\n",
+            "0 = GGGACTTCAGGCCCT\n",
             "1 = GGGTCAAACGACCCT\n",
             "2 = GGGACGTAAGTCCCT\n",
-            "3 = GGGTGGGCAGCCTCC\n",
+            "3 = AGCGCCAGAATCCCG\n",
             "4 = GGGGCGAAAGTCCCT\n",
-            "5 = GCGGCGGTGGTCCGG\n",
+            "5 = AGGACCTTCGGCCCC\n",
             "6 = GGGACTTCTGTCCCT\n",
             "7 = GGGACTTTCGGCCCT\n",
             "8 = GGGACCAACGCCCCT\n",
@@ -348,19 +533,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "033e8b20-30f9-4f2b-8982-316ef8a42141"
+        "outputId": "73bbf157-107e-438d-d7e6-f4cf979d1c52"
       },
       "source": [
         "print('Consenso:', Consensus(BestMotifs))\n",
         "print('Puntaje:', Score(BestMotifs))"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Consenso: GGGACGGAAGTCCCT\n",
-            "Puntaje: 22\n"
+            "Consenso: GGGACCTAAGTCCCT\n",
+            "Puntaje: 36\n"
           ],
           "name": "stdout"
         }
